[project]
name = "flightdev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "affine>=2.4.0",
    "dronekit>=2.9.2",
    "future>=1.0.0",
    "geopy>=2.4.1",
    "opencv-python>=4.13.0.92",
    "pymavlink>=2.4.49",
    "pyyaml>=6.0.3",
    "rasterio>=1.3",
    "vector3d>=1.1.1",
]
